--- a/Playing with css variables and js/Index.html
+++ b/Playing with css variables and js/Index.html
@@ -55,9 +55,12 @@
     const inputs=document.querySelectorAll('.control input');
 
     function handleUpdate(){
-        console.log(this.value);
+    
+        const suffix=this.dataset.sizing || '';
+        document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
     }
 
    inputs.forEach(input => input.addEventListener('change', handleUpdate));
+   inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
 </script>
 </html>
