--- a/Array Cardio/index.html
+++ b/Array Cardio/index.html
@@ -45,12 +45,8 @@
     console.table(ordered);
 
 
-        // Array.prototype.filter()
-    // 1. Filter the list of inventors for those who were born in the 1500's
-    const fifteen = inventors.filter(invertor =>(invertor.year >= 1500 && invertor.year <= 1600));
-    console.table(fifteen);
 
-    // Array.prototype.map()
+    Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
     const fullname=inventors.map(inventor => inventor.first + inventor.last);
     console.log(fullname);  
@@ -59,6 +55,7 @@
     // 3. Sort the inventors by birthdate, oldest to youngest 
     const ordered=inventors.sort((a,b) =>a.year > b.year ? 1 : -1);
     console.table(ordered);
+
 
 </script>
 </body>
